# ada

./: .gitignore  CMakeLists.txt  LICENSE  README.md  contributing.md  setup.py
ada/: CMakeLists.txt
ada/core/: ada_pb2.py  graph_pb2.py  io.py  utils.py
ada/core/nuke/: bake.py
ada/nuke/nodes/: Ada.tcl
ada/nuke/python/: __init__.py  context.py  globals.py  node.py  publish.py  utils.py
ada/nuke/python/registry/callbacks/globals/before/: set_script_range.py
ada/nuke/python/registry/callbacks/template/before/: set_frame_range.py
ada/proto/: ada.proto  graph.proto
apps/: CMakeLists.txt
apps/nuke/: CMakeLists.txt  init.py  menu.py
docs/source/: ada.core.gui.rst  ada.core.nuke.rst  ada.core.rst  ada.nuke.python.registry.callbacks.globals.after.rst  ada.nuke.python.registry.callbacks.globals.before.rst  ada.nuke.python.registry.callbacks.globals.rst  ada.nuke.python.registry.callbacks.rst  ada.nuke.python.registry.callbacks.template.after.rst  ada.nuke.python.registry.callbacks.template.before.rst  ada.nuke.python.registry.callbacks.template.rst  ada.nuke.python.registry.rst  ada.nuke.python.rst  ada.nuke.rst  ada.rst  conf.py  index.rst  modules.rst  nuke.rst  quickstart.rst
scripts/: CMakeLists.txt  ada  graph_parser
src/: Ada.tcl  CMakeLists.txt
src/ada/: __init__.py
src/ada/core/: common.py  globals.py  graph.py  io.py  utils.py
src/ada/core/gaffer/: bake.py
src/ada/core/gui/: qjsonmodel.py
src/ada/core/nuke/: bake.py
src/ada/nuke/: __init__.py  context.py  globals.py  gui.py  interfaces.py  node.py  readme.md  setup.py  store.py  utils.py
src/ada/nuke/actions/: print.py
src/ada/nuke/python/: context.py  publish.py
src/ada/nuke/python/registry/: __init__.py
src/ada/nuke/python/registry/callbacks/globals/before/: set_script_range.py
src/ada/nuke/registry/: store.py
src/ada/nuke/registry/callbacks/: __init__.py
src/ada/nuke/registry/callbacks/globals/: __init__.py
src/ada/nuke/registry/callbacks/globals/before/: set_script_range.py
src/ada/nuke/tab/: __init__.py
src/proto/: ada.proto
tests/: CMakeLists.txt  ada_core_tests.py  nosetests.py
tests/ada/: ada_core_tests.py
tests/gaffer/: gaffer_core_tests.py
tests/nuke/: ada_nuke_tests.py  tab.py
